Amarok ChangeLog
================
(C) 2002-2011 the Amarok authors.


VERSION 2.4.1
  FEATURES:
    * New "Preview" feature for the Organize Collection dialog. Patch by
      Maximilian Güntner <maximilian.guentner@gmail.com>.

  CHANGES:
    * Now all changes to Preset Formats in Organize Collection dialog get saved on close,
      doesn't matter If dialog was accepted or rejected.
    * Added "Update Preset" button to Organize Collection dialog, which updates currently
      choosen scheme.
    * Renewed FilterEditor dialog.
    * Changed tokens syntax in FileNameLayoutDialog (TagGuesser, OrginizeCollection dialogs)
      now tokens wrapped in percent signs (%token% instead of %token).
    * Added ability to guess tags from whole track path. (TagGuesser dialog)
    * Use KDirWatch to watch changes to collection.
    * Do always store track rating as tags in files. Patch by Alan Ezusti
      <alan.ezust@gmail.com>. (BR 259117)
    * Added missing tooltip for animation settings. Patch by Bhargav Mangipudi
      <bhargav.1191@gmail.com>. (BR 248690)

  BUGFIXES:
    * Fixed track's statistics update in case of StopAfterCurrent playback mode
      (prevent double statistics change). (BR 265654)
    * Delete .mood files when tracks got removed from collection via Collection
      view context menu, and move them to new destination during Organize Collection process.
      (BR 261629)
    * Fixed "Configure Amarok..." disappearing in tray menu. (BR 258226)
    * Fixed crash when quitting Amarok. (BR 253676, BR 257407)
    * Fixed empty folders removal after collection organization. (BR 190881)
    * Fixed crash when trying to load cover for track/album without artist. (BR 263256)
    * Fixed linking on Solaris 11 (and others?). (BR 264112)
    * Fixed temporary podcast download filenames that were to long by using MD5 hash instead.
      Thanks to Frank Steinmetzger for the patch. (BR 264813)